--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hogar de Patis - Inicio</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <script src="bootstrap/js/jquery.slim.min.js"></script>
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="css/estilos_nuevos.css">
-    <title>Hogar de Patis - Inicio</title>
 </head>
 <body>
-    <div id="grilla">
 <!--inicio header-->
     <header>
             <h1>Hogar De Patis</h1>
@@ -143,7 +145,6 @@
             </div>
         </div>
     </footer>
-</div>
 <!--fin footer-->
 </body>
 </html>
