--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <!--inicio header-->
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-6 text-left">
+                <div class="col-12 text-center col-lg-6 text-lg-left">
                     <h1>Hogar De Patis</h1>
                 </div>
-                <div class="col-6 text-right">
+                <div class="col-12 text-center col-lg-6 text-lg-right">
                     <nav>
                         <ul class="nav">
                             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
@@ -198,17 +198,21 @@
     <!--inicio footer-->
     <footer>
         <div class="container">
-            <div id="contenedor_items_footer" class="row align-items-center">  
-                <div id="form_novedades_footer" class="col-4">
-                    <form>
-                        <div class="form-group">
-                            <label for="InputEmailNovedades">Recibí las novedades por mail</label>
-                            <input type="email" class="form-control" id="InputEmail1">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
+            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
+                <div id="form_novedades_footer" class="col-5">
+                    <div class="row justify-content-center">
+                        <form>
+                            <div class="form-group text-center">
+                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                                <input type="email" class="form-control" id="InputEmail1">
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <ul class="menu_footer">
                         <li class="titulo_menu">Menú</li>
                         <li><a href="../index.html">Inicio</a></li>
@@ -236,4 +240,5 @@
     <!--fin footer-->
     </div>
 </body>
+
 </html>
