se agrega estilos para la pag de donaciones

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                     </nav>
                 </div>
             </div>
+        </div>
     </header>
     <!--fin header-->
-    <main id="grid_main">
+    <main>
         <!--inicio main-->
         <div class="container-fluid">
             <section id="sectionSlider">
@@ -231,7 +232,7 @@
                         <button><i class="fa-brands fa-instagram"></i></button>
                     </div>
                     <div class="logo_footer">
-                        <img src="img/logo.PNG" alt="Logo de Hogar de Patis">
+                        <img src="img/logo.PNG" alt="Logo de Hogar de Patis footer">
                     </div>
                 </div>
             </div>
