--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -5,75 +5,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hogar de Patis - Inicio</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <script src="../bootstrap/js/jquery.slim.min.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="../css/estilos_nuevos.css">
-    <title>Hogar de Patis - Donaciones</title>
 </head>
+
 <body>
-    <div id="grilla">
-<!--inicio header-->
-<header>
-    <h1>Hogar De Patis</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/nosotros.html">Nosotros</a></li>
-            <li><a href="pages/adopta.html">Adopta</a></li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
-            <li><a href="pages/donaciones.html">Donaciones</a></li>
-        </ul>
-    </nav>
-</header>
-<!--fin header-->
-<!--inicio main-->
+    <header>
+        <!--inicio header-->
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center col-lg-6 text-lg-left">
+                    <h1>Hogar De Patis</h1>
+                </div>
+                <div class="col-12 text-center col-lg-6 text-lg-right">
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/donaciones.html">Donaciones</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--fin header-->
+    <!--inicio main-->
     <main>
-        <div>
-            <h2>Tu aporte nos permite continuar llevando a cabo actividades sanitarias, educativas y de asistencialismo.</h2><BR>
-            <p>Los aportes económicos son importantes para pagar tratamientos, estudios médicos y honorarios veterinarios,
-                comprar insumos y alimento, financiar campañas de castración en zonas carenciadas, imprimir material de
-                difusión entre otros.</p><br>
-            <strong><p>Doná a través de MERCADOPAGO (Podes donar el importe que quieras).</p></strong><br>
-            <p>Nuestro alias es <strong>Hogar.de.patis</p></strong><br>
-            <p>(Todas las tarjetas de crédito y débito, Pago Fácil, Rapipago, Link, Banelco o desde la APP)</p>
+        <div class="container">
+            <div>
+                <h2>Tu aporte nos permite continuar llevando a cabo actividades sanitarias, educativas y de
+                    asistencialismo.</h2><BR>
+                <p>Los aportes económicos son importantes para pagar tratamientos, estudios médicos y honorarios
+                    veterinarios,
+                    comprar insumos y alimento, financiar campañas de castración en zonas carenciadas, imprimir material
+                    de
+                    difusión entre otros.</p><br>
+                <strong>
+                    <p>Doná a través de MERCADOPAGO (Podes donar el importe que quieras).</p>
+                </strong><br>
+                <p>Nuestro alias es <strong>Hogar.de.patis</p></strong><br>
+                <p>(Todas las tarjetas de crédito y débito, Pago Fácil, Rapipago, Link, Banelco o desde la APP)</p>
+            </div>
         </div>
     </main>
-<!--fin main-->
-<!--inicio footer-->
+    <!--fin main-->
+    <!--inicio footer-->
     <footer>
-        <div class="ancho_footer">
-            <div class="form_novedades">
-                <form action="">
-                    <label for="correo">Recibi las Novedades</label><br>
-                    <input type="text" name="correo" placeholder="Ingresá tu E-mail"><br>
-                    <input type="submit" name="enviar_suscripcion" value="Suscribirme">
-                </form>
-            </div>
-            <div class="ancho_menu">
-                <ul class="menu_footer">
-                    <li class="titulo_menu">Menú</li>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
-            </div>
-            <div class="redes">
-                <h4>Seguinos</h4>
-                <div class="iconos_redes">
-                    <button><i class="fa-brands fa-facebook-f"></i></button>
-                    <button><i class="fa-brands fa-twitter"></i></button>
-                    <button><i class="fa-brands fa-youtube"></i></button>
-                    <button><i class="fa-brands fa-instagram"></i></button>
+        <div class="container">
+            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
+                <div id="form_novedades_footer" class="col-5">
+                    <div class="row justify-content-center">
+                        <form>
+                            <div class="form-group text-center">
+                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                                <input type="email" class="form-control" id="InputEmail1">
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="logo_footer">
-                    <img src="../img/logo.PNG" alt="Logo de Hogar de Patis">
+                <div class="col-3">
+                    <ul class="menu_footer">
+                        <li class="titulo_menu">Menú</li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="adopta.html">Adopta</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="donaciones.html">Donaciones</a></li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h4 class="seguinos">Seguinos</h4>
+                    <div class="iconos_redes">
+                        <button><i class="fa-brands fa-facebook-f"></i></button>
+                        <button><i class="fa-brands fa-twitter"></i></button>
+                        <button><i class="fa-brands fa-youtube"></i></button>
+                        <button><i class="fa-brands fa-instagram"></i></button>
+                    </div>
+                    <div class="logo_footer">
+                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
-</div>
-<!--fin footer-->
+    <!--fin footer-->
+    </div>
 </body>
+
 </html>
