--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -40,20 +40,23 @@
     <!--fin header-->
     <!--inicio main-->
     <main>
-        <div class="container">
-            <div>
-                <h2>Tu aporte nos permite continuar llevando a cabo actividades sanitarias, educativas y de
-                    asistencialismo.</h2><BR>
-                <p>Los aportes económicos son importantes para pagar tratamientos, estudios médicos y honorarios
-                    veterinarios,
-                    comprar insumos y alimento, financiar campañas de castración en zonas carenciadas, imprimir material
-                    de
-                    difusión entre otros.</p><br>
-                <strong>
-                    <p>Doná a través de MERCADOPAGO (Podes donar el importe que quieras).</p>
-                </strong><br>
-                <p>Nuestro alias es <strong>Hogar.de.patis</p></strong><br>
-                <p>(Todas las tarjetas de crédito y débito, Pago Fácil, Rapipago, Link, Banelco o desde la APP)</p>
+        <div class="container" id="main_donaciones">
+            <div class="row align-items-center">
+                <div>
+                    <h2>Tu aporte nos permite continuar llevando a cabo actividades sanitarias, educativas y de
+                        asistencialismo.</h2>
+                    <p>Los aportes económicos son importantes para pagar tratamientos, estudios médicos y honorarios
+                        veterinarios,
+                        comprar insumos y alimento, financiar campañas de castración en zonas carenciadas, imprimir
+                        material
+                        de
+                        difusión entre otros.</p>
+                    <strong>
+                        <p>Doná a través de MERCADOPAGO (Podes donar el importe que quieras).</p>
+                    </strong>
+                    <p>Nuestro alias es <strong>Hogar.de.patis</p></strong>
+                    <p>(Todas las tarjetas de crédito y débito, Pago Fácil, Rapipago, Link, Banelco o desde la APP)</p>
+                </div>
             </div>
         </div>
     </main>
@@ -63,7 +66,7 @@
         <div class="container">
             <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
                 <div id="form_novedades_footer" class="col-5">
-                    <div class="row justify-content-center">
+                    <div id="contenedor_form" class="row justify-content-center">
                         <form>
                             <div class="form-group text-center">
                                 <label for="InputEmailNovedades">Recibí las novedades por mail</label>
@@ -76,14 +79,16 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <ul class="menu_footer">
-                        <li class="titulo_menu">Menú</li>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="adopta.html">Adopta</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="donaciones.html">Donaciones</a></li>
-                    </ul>
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <ul class="menu_footer">
+                            <li class="titulo_menu">Menú</li>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="adopta.html">Adopta</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                            <li><a href="donaciones.html">Donaciones</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-4">
                     <h4 class="seguinos">Seguinos</h4>
