--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="container">
             <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
                 <div id="form_novedades_footer" class="col-5">
-                    <div class="row justify-content-center">
+                    <div id="contenedor_form" class="row justify-content-center">
                         <form>
                             <div class="form-group text-center">
                                 <label for="InputEmailNovedades">Recibí las novedades por mail</label>
@@ -214,14 +214,16 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <ul class="menu_footer">
-                        <li class="titulo_menu">Menú</li>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="adopta.html">Adopta</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="donaciones.html">Donaciones</a></li>
-                    </ul>
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <ul class="menu_footer">
+                            <li class="titulo_menu">Menú</li>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="adopta.html">Adopta</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                            <li><a href="donaciones.html">Donaciones</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-4">
                     <h4 class="seguinos">Seguinos</h4>
@@ -232,7 +234,7 @@
                         <button><i class="fa-brands fa-instagram"></i></button>
                     </div>
                     <div class="logo_footer">
-                        <img src="img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
                     </div>
                 </div>
             </div>
