--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -25,11 +25,11 @@
                 <div class="col-12 text-center col-lg-6 text-lg-right">
                     <nav>
                         <ul class="nav">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/adopta.html">Adopta</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link" href="pages/donaciones.html">Donaciones</a>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
                             </li>
                         </ul>
                     </nav>
@@ -38,11 +38,11 @@
         </div>
     </header>
     <!--fin header-->
-    <!--inicio main-->
     <main>
+        <!--inicio main-->
         <div class="container" id="main_donaciones">
-            <div class="row align-items-center">
-                <div>
+            <div class="row">
+                <div class="col-12">
                     <h2>Tu aporte nos permite continuar llevando a cabo actividades sanitarias, educativas y de
                         asistencialismo.</h2>
                     <p>Los aportes económicos son importantes para pagar tratamientos, estudios médicos y honorarios
@@ -51,9 +51,7 @@
                         material
                         de
                         difusión entre otros.</p>
-                    <strong>
-                        <p>Doná a través de MERCADOPAGO (Podes donar el importe que quieras).</p>
-                    </strong>
+                    <strong><p>Doná a través de MERCADOPAGO (Podes donar el importe que quieras).</p></strong>
                     <p>Nuestro alias es <strong>Hogar.de.patis</p></strong>
                     <p>(Todas las tarjetas de crédito y débito, Pago Fácil, Rapipago, Link, Banelco o desde la APP)</p>
                 </div>
@@ -106,7 +104,6 @@
         </div>
     </footer>
     <!--fin footer-->
-    </div>
 </body>
 
 </html>
