--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 text-center col-lg-6 text-lg-left">
-                    <h1>Hogar De Patis</h1>
+                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
                 </div>
                 <div class="col-12 text-center col-lg-6 text-lg-right">
                     <nav>
@@ -37,71 +37,83 @@
         </div>
     </header>
     <!--fin header-->
+
     <main>
         <!--inicio main-->
         <div class="container-fluid">
-            <section id="sectionSlider">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/cachorros-web.jpg" data-src="img/cachorros-web.jpg"
-                                alt="First slide">
+            <div class="row">
+                <section id="sectionSlider">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="img/cachorros-web.jpg" data-src="img/cachorros-web.jpg"
+                                    alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/slider-adopta.jpg" data-src="img/slider-adopta.jpg"
+                                    alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/slider-hogardepatis.jpg"
+                                    data-src="img/slider-hogardepatis.jpg" alt="third slide">
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/slider-adopta.jpg" data-src="img/slider-adopta.jpg"
-                                alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/slider-hogardepatis.jpg"
-                                data-src="img/slider-hogardepatis.jpg" alt="third slide">
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+                </section>
+            </div>
         </div>
         <div class="container">
-            </section>
-            <section id="sectionSalvarVidas">
-                <h2>Salva Vidas</h2>
-                <p>Es responsabilidad del Estado realizar campañas de castración gratuitas, masivas, sistemáticas y
-                    extensivas en el tiempo, asi como también concSientizar sobre el maltrato animal y como
-                    denunciarlo. Pero
-                    también es necesaria la participación responsable de cada ciudadano.
-                </p><br>
-                <div class="container">
-                    <div class="row">
-                        <div class="card col-6">
-                            <img class="card-img" src="img/castra.jpg" alt="Card image">
-                            <div class="card-img-overlay">
-                                <p class="card-text">AYUDA CASTRANDO</p>
+            <div class="row">
+                <section id="sectionSalvarVidas">
+                    <div>
+                        <h2>Salva Vidas</h2>
+                        <p>Es responsabilidad del Estado realizar campañas de castración gratuitas, masivas,
+                            sistemáticas y
+                            extensivas en el tiempo, asi como también concSientizar sobre el maltrato animal y como
+                            denunciarlo. Pero
+                            también es necesaria la participación responsable de cada ciudadano.
+                        </p>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="card col-6">
+                                <img class="card-img" src="img/castra.jpg" alt="Card image">
+                                <div class="card-img-overlay">
+                                    <p class="card-text">AYUDA CASTRANDO</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card col-6">
-                            <img class="card-img" src="img/denuncia_maltrato.jpg" alt="Card image">
-                            <div class="card-img-overlay">
-                                <p class="card-text">DENUNCIA EL MALTRATO</p>
+                            <div class="card col-6">
+                                <img class="card-img" src="img/denuncia_maltrato.jpg" alt="Card image">
+                                <div class="card-img-overlay">
+                                    <p class="card-text">DENUNCIA EL MALTRATO</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-            <br>
+                </section>
+            </div>
+        </div>
+        <div class="container">
             <section id="sectionAdoptantes">
                 <h2>Adoptantes</h2>
                 <div class="bd-example">
@@ -173,27 +185,35 @@
                     </div>
                 </div>
                 <br>
-                <section id="sectionTransitos">
-                    <h2>Red de Hogar de Transitos</h2>
-                    <p>Quizás no puedas adoptar un animal de compañía de forma definitiva pero sí brindarle un lugar por
-                        un
-                        periodo de tiempo corto a un animal en tratamiento hasta su recuperación o a dos o más cachorros
-                        hasta
-                        su adopción definitiva. Justamente se trata de eso, de un hogar responsable que lo pueda cuidar
-                        transitoriamente.</p><br>
-                    <h3>Sumate a la Red de Hogares de Transito de Hogar de Patis</h3>
-                    <h4>Requisitos</h4>
-                    <ul>
-                        <li>Vivir en Capital Federal o conurbano bonaerense (Buenos Aires)</li>
-                        <li>No tener otros cachorros en la vivienda.</li>
-                        <li>Tiempo mínimo de estadía: 2 semanas.</li>
-                    </ul>
-                    <h4>Hogar de patis se hace cargo de todos los gastos durante el periodo de permanencia de los
-                        animales en el
-                        hogar.</h4>
-                    <p>Para ser transito manda un mail a transitos@hogardepatis.org </p>
-                </section>
-        </div>
+                <div class="container">
+                    <div class="row">
+                        <section id="sectionTransitos">
+                            <h2>Red de Hogar de Transitos</h2>
+                            <p>Quizás no puedas adoptar un animal de compañía de forma definitiva pero sí brindarle un
+                                lugar
+                                por
+                                un
+                                periodo de tiempo corto a un animal en tratamiento hasta su recuperación o a dos o más
+                                cachorros
+                                hasta
+                                su adopción definitiva. Justamente se trata de eso, de un hogar responsable que lo pueda
+                                cuidar
+                                transitoriamente.</p><br>
+                            <h3>Sumate a la Red de Hogares de Transito de Hogar de Patis</h3>
+                            <h4>Requisitos:</h4>
+                            <ul id="lista_requisitos_tansitos">
+                                <li>Vivir en Capital Federal o conurbano bonaerense (Buenos Aires)</li>
+                                <li>No tener otros cachorros en la vivienda.</li>
+                                <li>Tiempo mínimo de estadía: 2 semanas.</li>
+                            </ul>
+                            <h3>Hogar de patis se hace cargo de todos los gastos durante el periodo de permanencia de
+                                los
+                                animales en el
+                                hogar.</h3>
+                            <p>Para ser transito manda un mail a transitos@hogardepatis.org </p>
+                        </section>
+                    </div>
+                </div>
     </main>
     <!--fin main-->
     <!--inicio footer-->
@@ -241,7 +261,6 @@
         </div>
     </footer>
     <!--fin footer-->
-    </div>
 </body>
 
 </html>
