--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 text-center col-lg-6 text-lg-left">
-                    <h1>Hogar De Patis</h1>
+                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
                 </div>
                 <div class="col-12 text-center col-lg-6 text-lg-right">
                     <nav>
