--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Hogar de Patis - Nosotros</title>
-</head>
-<body>
-<!--inicio header-->
-    <header>
-        <div>
-            <h1 class="logo">
-                <a href="../index.html">Hogar de Patis</a>
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hogar de Patis - Inicio</title>
+        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <script src="../bootstrap/js/jquery.slim.min.js"></script>
+        <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="../css/styles.css">
+        <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    </head>
+    <body>
+        <header>
+            <!--inicio header-->
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center col-lg-6 text-lg-left">
+                        <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
+                    </div>
+                    <div class="col-12 text-center col-lg-6 text-lg-right">
+                        <nav>
+                            <ul class="nav">
+                                <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                                <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                                <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
 <!--fin header-->
 <!--inicio main-->
     <main>
@@ -43,27 +51,36 @@
     </main>
 <!--fin main-->
 <!--inicio footer-->
-    <footer>
-        <div class="ancho_footer">
-            <div class="form_novedades">
-                <form action="">
-                    <label for="correo">Recibi las Novedades</label><br>
-                    <input type="text" name="correo" placeholder="Ingresá tu E-mail"><br>
-                    <input type="submit" name="enviar_suscripcion" value="Suscribirme">
-                </form>
+<footer>
+    <div class="container">
+        <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
+            <div id="form_novedades_footer" class="col-5">
+                <div id="contenedor_form" class="row justify-content-center">
+                    <form>
+                        <div class="form-group text-center">
+                            <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                            <input type="email" class="form-control" id="InputEmail1">
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="ancho_menu">
-                <ul class="menu_footer">
-                    <li class="titulo_menu">Menú</li>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
+            <div class="col-3">
+                <div id="contenedor_form" class="row justify-content-center">
+                    <ul class="menu_footer">
+                        <li class="titulo_menu">Menú</li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="adopta.html">Adopta</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="donaciones.html">Donaciones</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="redes">
-                <h4>Seguinos</h4>
+            <div class="col-4">
+                <h4 class="seguinos">Seguinos</h4>
                 <div class="iconos_redes">
                     <button><i class="fa-brands fa-facebook-f"></i></button>
                     <button><i class="fa-brands fa-twitter"></i></button>
@@ -71,11 +88,12 @@
                     <button><i class="fa-brands fa-instagram"></i></button>
                 </div>
                 <div class="logo_footer">
-                    <img src="../img/logo.PNG" alt="Logo de Hogar de Patis">
+                    <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 <!--fin footer-->
 </body>
 </html>
