Se agregan cambios en boostrap para todos los archivos en pantalla de escritorio y estilos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <!--fin header-->
 
-    <main>
+    <main id="main_index">
         <!--inicio main-->
         <div class="container-fluid">
             <div class="row">
