--- a/pages/adopta.html
+++ b/pages/adopta.html
@@ -5,137 +5,200 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hogar de Patis - Adopta</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <script src="../bootstrap/js/jquery.slim.min.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Hogar de Patis - Adopta</title>
 </head>
+
 <body>
-<!--inicio header-->
     <header>
-        <div>
-            <h1 class="logo">
-                <a href="../index.html">Hogar de Patis</a>
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
-            </nav>
+        <!--inicio header-->
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center col-lg-6 text-lg-left">
+                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
+                </div>
+                <div class="col-12 text-center col-lg-6 text-lg-right">
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
-<!--fin header-->
-<!--inicio main-->
+    <!--fin header-->
+    <!--inicio main-->
     <main>
-        <article>
-            <h2>Requisitos de Adopcion</h1><br>
-            <img src="../img/p4p-fondo.jpg" alt="">
-            <p class="parrafo_presentacion_adopciones">Adoptar es un acto de responsabilidad y compromiso por lo que es importante que estes capacitado para
-                hacerlo. Un perro puede vivir entre 14 y 18 años y durante todo ese tiempo dependerá de vos.
-
-                Algunas cuestiones para tener en cuenta son el espacio disponible de tu casa, el tiempo que tengas para
-                brindarle compañía, actividad física y cuidado. También los costos asociados a su alimentación, atención
-                veterinaria y estadía durante tus vacaciones.
-
-                Para asegurarte una convivencia feliz tu elección debe estar orientada al estilo de vida que llevas y el
-                tiempo real que le podes dedicar.
-            </p>
-            <hr><br>
-            <h2>Aquí te damos algunos tips pero recordá que lo más importante es adoptar con conciencia y con el
-                corazón.
-            </h2>
-            <ul class="lista_de_tips_adopciones">
-                <li><strong>Un cachorro:</strong> (45 días-12 meses) es precioso pero, requiere de mucho tiempo y esfuerzo. Come 4 veces
-                    al
-                    día, puede llorar por las noches y en las ausencias de los dueños. Mastica objetos, hace pis y caca
-                    en
-                    cualquier lado, requiere educación y paciencia, es un bebe durante un año. No hay garantías con
-                    respecto
-                    al tamaño definitivo. En caso de haber niños chicos en el hogar, hay que marcar la diferencia entre
-                    mascota y juguete. Sin embargo es muy satisfactorio ir viendo el crecimiento y desarrollo de un
-                    cachorrito hasta convertirse en adulto.</li>
-                <li><strong>Un joven:</strong> (1 año-5 años) es juguetón pero más adulto. Son más hábiles para centrarse en la
-                    educación.
-                    Generalmente ya está con la vacunación completa, lo que no hay riesgo de contraer alguna enfermedad.
-                    Están esterilizados. Ya se puede sacarlo a pasear y bañarlo. Come dos veces al día. Ya tiene el
-                    tamaño
-                    definitivo, no cambiara de aspecto.</li>
-                <li><strong>Un adulto:</strong> (5 años-9años) no genera problemas por quedarse algunas horas solo. Es probable que
-                    duerma
-                    toda lo noche. Se habitúa fácilmente a su nueva familia. Aceptan su sitio dentro de la jerarquía del
-                    hogar, se adaptan a órdenes básicas, si es que no las tienen adquiridas de antes. Se muestran
-                    gratificantes y toman mucho cariño a su nueva familia y casa.</li>
-                <li><strong>Un abuelo:</strong> (10 años-día de su muerte) nos dejan muchísimo tiempo para nosotros. No requieren tanto
-                    trabajo. Son muy calmos y sedentarios. Aunque el tiempo de compañía es seguramente menor, también se
-                    merecen un hogar. Podemos darle durante los años que le quedan una vida digna y agradable. Estarán
-                    súper
-                    agradecidos, esperaron su hogar mucho tiempo.</li>
-            </ul>
-        </article>
-        <article>
-            <h2>Si ya lo decidiste y te sentís capacitado es momento de comenzar con el proceso de adopción.</h2>
-            <p class="text_presentacion">Nuestros requisitos de adopcion son los siguientes:</p>
-            <ul class="lista_de_requisitos">
-                <li>Los animales se entregan luego de una charla telefónica orientada a corroborar que se cumplen con
-                    las normas básicas de tenencia responsable.</li>
-                <li>Los adoptantes deberán firmar un contrato de adopción donde consten sus datos personales y donde se
-                    comprometen a brindar los cuidados necesarios.</li>
-                <li>Los animales mayores a 7 meses serán dados en adopción ya castrados. El adoptante de un cachorro de
-                    menor edad asumirá la responsabilidad y el compromiso de castrarlo entre los 7 meses y el año de
-                    edad. La castración es un requisito prioritario para concretar la adopción como parte de la tenencia
-                    responsable de un animal de compañia.</li>
-                <li>Nos reservamos el derecho de dar o no un animal en adopción de acuerdo a si se cumplen o no los
-                    requerimientos que nuestra ONG considera.</li>
-                <li>Las adopciones se limitan geográficamente a Capital Federal y Gran Buenos Aires, Argentina (sujeto a
-                    consideración)</li>
-                <li>Los datos suministrados por el solicitante son confidenciales y de acceso restringido, para el uso
-                    exclusivo de los procesos de adopción de la Asociación Civil Proyecto 4 Patas y no serán
-                    transferidos a terceros bajo ninguna circunstancia.</li>
-            </ul>
-            <div class="boton_submit">
-                <input type="submit" value="Postularme para adoptar">
+        <div class="container">
+            <div class="row">
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <h2 class="col-lg-12">Requisitos de Adopcion</h1>
+                                <img class="col-lg-12" src="../img/p4p-fondo.jpg" alt="">
+                                <p class="col-lg-12">
+                                    Adoptar es un acto de responsabilidad y
+                                    compromiso
+                                    por lo que es importante que estes capacitado para
+                                    hacerlo. Un perro puede vivir entre 14 y 18 años y durante todo ese tiempo dependerá
+                                    de
+                                    vos.
+                                    Algunas cuestiones para tener en cuenta son el espacio disponible de tu casa, el
+                                    tiempo
+                                    que
+                                    tengas para
+                                    brindarle compañía, actividad física y cuidado. También los costos asociados a su
+                                    alimentación, atención
+                                    veterinaria y estadía durante tus vacaciones.
+                                    Para asegurarte una convivencia feliz tu elección debe estar orientada al estilo de
+                                    vida
+                                    que
+                                    llevas y el
+                                    tiempo real que le podes dedicar.
+                                </p>
+                        </div>
+                    </div>
+                </section>
+                <article>
+                    <hr><br>
+                    <h2>Aquí te damos algunos tips pero recordá que lo más importante es adoptar con conciencia y
+                        con el
+                        corazón.
+                    </h2>
+                    <ul class="lista_de_tips_adopciones">
+                        <li><strong>Un cachorro:</strong> (45 días-12 meses) es precioso pero, requiere de mucho
+                            tiempo y esfuerzo. Come 4 veces
+                            al
+                            día, puede llorar por las noches y en las ausencias de los dueños. Mastica objetos, hace
+                            pis y caca
+                            en
+                            cualquier lado, requiere educación y paciencia, es un bebe durante un año. No hay
+                            garantías con
+                            respecto
+                            al tamaño definitivo. En caso de haber niños chicos en el hogar, hay que marcar la
+                            diferencia entre
+                            mascota y juguete. Sin embargo es muy satisfactorio ir viendo el crecimiento y
+                            desarrollo de un
+                            cachorrito hasta convertirse en adulto.</li>
+                        <li><strong>Un joven:</strong> (1 año-5 años) es juguetón pero más adulto. Son más hábiles
+                            para centrarse en la
+                            educación.
+                            Generalmente ya está con la vacunación completa, lo que no hay riesgo de contraer alguna
+                            enfermedad.
+                            Están esterilizados. Ya se puede sacarlo a pasear y bañarlo. Come dos veces al día. Ya
+                            tiene el
+                            tamaño
+                            definitivo, no cambiara de aspecto.</li>
+                        <li><strong>Un adulto:</strong> (5 años-9años) no genera problemas por quedarse algunas
+                            horas solo. Es probable que
+                            duerma
+                            toda lo noche. Se habitúa fácilmente a su nueva familia. Aceptan su sitio dentro de la
+                            jerarquía del
+                            hogar, se adaptan a órdenes básicas, si es que no las tienen adquiridas de antes. Se
+                            muestran
+                            gratificantes y toman mucho cariño a su nueva familia y casa.</li>
+                        <li><strong>Un abuelo:</strong> (10 años-día de su muerte) nos dejan muchísimo tiempo para
+                            nosotros. No requieren tanto
+                            trabajo. Son muy calmos y sedentarios. Aunque el tiempo de compañía es seguramente
+                            menor, también se
+                            merecen un hogar. Podemos darle durante los años que le quedan una vida digna y
+                            agradable. Estarán
+                            súper
+                            agradecidos, esperaron su hogar mucho tiempo.</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Requisitos de adopcion</h2>
+                    <p>Si ya lo decidiste y te sentís capacitado es momento de comenzar con el proceso de adopción. Nuestros requisitos de adopcion son los siguientes:</p>
+                    <ul class="lista_de_requisitos">
+                        <li>Los animales se entregan luego de una charla telefónica orientada a corroborar que se
+                            cumplen con
+                            las normas básicas de tenencia responsable.</li>
+                        <li>Los adoptantes deberán firmar un contrato de adopción donde consten sus datos personales y
+                            donde se
+                            comprometen a brindar los cuidados necesarios.</li>
+                        <li>Los animales mayores a 7 meses serán dados en adopción ya castrados. El adoptante de un
+                            cachorro de
+                            menor edad asumirá la responsabilidad y el compromiso de castrarlo entre los 7 meses y el
+                            año de
+                            edad. La castración es un requisito prioritario para concretar la adopción como parte de la
+                            tenencia
+                            responsable de un animal de compañia.</li>
+                        <li>Nos reservamos el derecho de dar o no un animal en adopción de acuerdo a si se cumplen o no
+                            los
+                            requerimientos que nuestra ONG considera.</li>
+                        <li>Las adopciones se limitan geográficamente a Capital Federal y Gran Buenos Aires, Argentina
+                            (sujeto a
+                            consideración)</li>
+                        <li>Los datos suministrados por el solicitante son confidenciales y de acceso restringido, para
+                            el uso
+                            exclusivo de los procesos de adopción de la Asociación Civil Proyecto 4 Patas y no serán
+                            transferidos a terceros bajo ninguna circunstancia.</li>
+                    </ul>
+                    <div class="boton_submit">
+                        <input type="submit" value="Postularme para adoptar">
+                    </div>
+                </article>
             </div>
-        </article>
+        </div>
     </main>
-<!--fin main-->
-<!--inicio footer-->
+    <!--fin main-->
+    <!--inicio footer-->
     <footer>
-        <div class="ancho_footer">
-            <div class="form_novedades">
-                <form action="">
-                    <label for="correo">Recibi las Novedades</label><br>
-                    <input type="text" name="correo" placeholder="Ingresá tu E-mail"><br>
-                    <input type="submit" name="enviar_suscripcion" value="Suscribirme">
-                </form>
-            </div>
-            <div class="ancho_menu">
-                <ul class="menu_footer">
-                    <li class="titulo_menu">Menú</li>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
-            </div>
-            <div class="redes">
-                <h4>Seguinos</h4>
-                <div class="iconos_redes">
-                    <button><i class="fa-brands fa-facebook-f"></i></button>
-                    <button><i class="fa-brands fa-twitter"></i></button>
-                    <button><i class="fa-brands fa-youtube"></i></button>
-                    <button><i class="fa-brands fa-instagram"></i></button>
+        <div class="container">
+            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
+                <div id="form_novedades_footer" class="col-5">
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <form>
+                            <div class="form-group text-center">
+                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                                <input type="email" class="form-control" id="InputEmail1">
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="logo_footer">
-                    <img src="../img/logo.PNG" alt="Logo de Hogar de Patis">
+                <div class="col-3">
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <ul class="menu_footer">
+                            <li class="titulo_menu">Menú</li>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="adopta.html">Adopta</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                            <li><a href="donaciones.html">Donaciones</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h4 class="seguinos">Seguinos</h4>
+                    <div class="iconos_redes">
+                        <button><i class="fa-brands fa-facebook-f"></i></button>
+                        <button><i class="fa-brands fa-twitter"></i></button>
+                        <button><i class="fa-brands fa-youtube"></i></button>
+                        <button><i class="fa-brands fa-instagram"></i></button>
+                    </div>
+                    <div class="logo_footer">
+                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
-<!--fin footer-->
+    <!--fin footer-->
 </body>
+
 </html>
