--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,97 +5,127 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hogar de Patis - Contacto</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <script src="../bootstrap/js/jquery.slim.min.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Hogar de Patis - Contacto</title>
 </head>
+
 <body>
-<!--inicio header-->
     <header>
-        <div>
-            <h1 class="logo">
-                <a href="../index.html">Hogar de Patis</a>
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
-            </nav>
+        <!--inicio header-->
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center col-lg-6 text-lg-left">
+                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
+                </div>
+                <div class="col-12 text-center col-lg-6 text-lg-right">
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
-<!--fin header-->
-<!--inicio main-->
+    <!--fin header-->
+    <!--inicio main-->
     <main>
-        <h2>Contacto</h2><br>
-        <p>Para contactarse con nosotros complete el siguiente formulario y seleccione el área sobre cual esta interesado.</p><br>
-        <form action="formulario_de_contacto.php" method="post">
-            <label for="nombre_y_apellido">Nombre y Apellido (requerido)</label><br>
-            <input type="text" name="nombre_y_apellido" placeholder="Escribe tu nombre"><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Contacto</h2>
+                    <p>Para contactarse con nosotros complete el siguiente formulario y seleccione el área sobre cual
+                        esta
+                        interesado.</p>
+                </div>
+                <div class="col-lg-6 text-lg-left">
+                    <form action="formulario_de_contacto.php" method="post">
+                        <label for="nombre_y_apellido">Nombre y Apellido (requerido)</label><br>
+                        <input type="text" name="nombre_y_apellido" placeholder="Escribe tu nombre"><br>
 
-            <label for="email">E-mail (requirido)</label><br>
-            <input type="text" name="email" placeholder="Escribe tu E-mail"><br>
+                        <label for="email">E-mail (requirido)</label><br>
+                        <input type="text" name="email" placeholder="Escribe tu E-mail"><br>
 
-            <label for="telefono">Teléfono</label><br>
-            <input type="text" name="telefono" placeholder="Escribe tu teléfono"><br>
+                        <label for="telefono">Teléfono</label><br>
+                        <input type="text" name="telefono" placeholder="Escribe tu teléfono"><br>
 
-            <label for="asunto">Área de contacto</label><br>
-            <select name="asunto" id="asunto">
-                <option value="Adopciones">Adopciones</option>
-                <option value="Donaciones">Donaciones</option>
-                <option value="Voluntarios">Voluntarios</option>
-                <option value="Otros">Otros</option>
-            </select><br>
+                        <label for="asunto">Área de contacto</label><br>
+                        <select name="asunto" id="asunto">
+                            <option value="Adopciones">Adopciones</option>
+                            <option value="Donaciones">Donaciones</option>
+                            <option value="Voluntarios">Voluntarios</option>
+                            <option value="Otros">Otros</option>
+                        </select><br>
 
-            <label for="mensaje">Mensaje</label><br>                     
-            <textarea name="mensaje" placeholder="Deja aquí tu mensaje..."></textarea><br>
-        
-            <input type="submit" name="enviar_formulario" value="Enviar Consulta">
-            <input type="reset" value="Limpiar formulario">
-        </form>
-        <div class="contenedor_img">
-            <img class="imagen_contacto_form" src="../img/contacto.jpg" alt="Imagen de perro feliz">
+                        <label for="mensaje">Mensaje</label><br>
+                        <textarea name="mensaje" placeholder="Deja aquí tu mensaje..."></textarea><br>
+
+                        <input type="submit" name="enviar_formulario" value="Enviar Consulta">
+                        <input type="reset" value="Limpiar formulario">
+                    </form>
+                </div>
+                <div class="col-lg-6 text-lg-right">
+                    <img id="imagen_perro_form_contacto" class="imagen_contacto_form" src="../img/contacto.jpg" alt="Imagen de perro feliz">
+                </div>
+            </div>
         </div>
     </main>
-<!--fin main-->
-<!--inicio footer-->
+    <!--fin main-->
+    <!--inicio footer-->
     <footer>
-        <div class="ancho_footer">
-            <div class="form_novedades">
-                <form action="">
-                    <label for="correo">Recibi las Novedades</label><br>
-                    <input type="text" name="correo" placeholder="Ingresá tu E-mail"><br>
-                    <input type="submit" name="enviar_suscripcion" value="Suscribirme">
-                </form>
-            </div>
-            <div class="ancho_menu">
-                <ul class="menu_footer">
-                    <li class="titulo_menu">Menú</li>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="adopta.html">Adopta</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="donaciones.html">Donaciones</a></li>
-                </ul>
-            </div>
-            <div class="redes">
-                <h4>Seguinos</h4>
-                <div class="iconos_redes">
-                    <button><i class="fa-brands fa-facebook-f"></i></button>
-                    <button><i class="fa-brands fa-twitter"></i></button>
-                    <button><i class="fa-brands fa-youtube"></i></button>
-                    <button><i class="fa-brands fa-instagram"></i></button>
+        <div class="container">
+            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
+                <div id="form_novedades_footer" class="col-5">
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <form>
+                            <div class="form-group text-center">
+                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                                <input type="email" class="form-control" id="InputEmail1">
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="logo_footer">
-                    <img src="../img/logo.PNG" alt="Logo de Hogar de Patis">
+                <div class="col-3">
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <ul class="menu_footer">
+                            <li class="titulo_menu">Menú</li>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="adopta.html">Adopta</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                            <li><a href="donaciones.html">Donaciones</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h4 class="seguinos">Seguinos</h4>
+                    <div class="iconos_redes">
+                        <button><i class="fa-brands fa-facebook-f"></i></button>
+                        <button><i class="fa-brands fa-twitter"></i></button>
+                        <button><i class="fa-brands fa-youtube"></i></button>
+                        <button><i class="fa-brands fa-instagram"></i></button>
+                    </div>
+                    <div class="logo_footer">
+                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
-<!--fin footer-->
+    <!--fin footer-->
 </body>
+
 </html>
