--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,99 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hogar de Patis - Inicio</title>
-        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-        <script src="../bootstrap/js/jquery.slim.min.js"></script>
-        <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="../css/styles.css">
-        <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    </head>
-    <body>
-        <header>
-            <!--inicio header-->
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-12 text-center col-lg-6 text-lg-left">
-                        <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
-                    </div>
-                    <div class="col-12 text-center col-lg-6 text-lg-right">
-                        <nav>
-                            <ul class="nav">
-                                <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                                <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                                <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hogar de Patis - Nosotros</title>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <script src="../bootstrap/js/jquery.slim.min.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="https://kit.fontawesome.com/e9598d65a3.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+</head>
+
+<body>
+    <header><!--inicio header-->
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center col-lg-6 text-lg-left">
+                    <h1><i id="paw_logo" class="fa-solid fa-paw"></i> Hogar De Patis</h1>
                 </div>
-            </div>
-        </header>
-<!--fin header-->
-<!--inicio main-->
-    <main>
-        <h2>Nosotros</h2><br>
-        <hr><br>
-        <h2>Nuestro Equipo</h2><br>
-        <p>Somos un hogar de animales especializada en la ayuda a perros y gatos
-            maltratados y/o abandonados; totalmente independiente que no recibe subvenciones
-            de organismos oficiales, empresas ni partidos políticos.
-            Hogar de Patis está compuesto por voluntarios que comparten el respeto por la vida de los animales y los
-            consideran sus iguales siendo que estos tienen capacidad para sentir placer, alegría, dolor y sufrimiento.
-        </p>
-    </main>
-<!--fin main-->
-<!--inicio footer-->
-<footer>
-    <div class="container">
-        <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
-            <div id="form_novedades_footer" class="col-5">
-                <div id="contenedor_form" class="row justify-content-center">
-                    <form>
-                        <div class="form-group text-center">
-                            <label for="InputEmailNovedades">Recibí las novedades por mail</label>
-                            <input type="email" class="form-control" id="InputEmail1">
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary">Enviar</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="col-3">
-                <div id="contenedor_form" class="row justify-content-center">
-                    <ul class="menu_footer">
-                        <li class="titulo_menu">Menú</li>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
-                        <li><a href="adopta.html">Adopta</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="donaciones.html">Donaciones</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-4">
-                <h4 class="seguinos">Seguinos</h4>
-                <div class="iconos_redes">
-                    <button><i class="fa-brands fa-facebook-f"></i></button>
-                    <button><i class="fa-brands fa-twitter"></i></button>
-                    <button><i class="fa-brands fa-youtube"></i></button>
-                    <button><i class="fa-brands fa-instagram"></i></button>
-                </div>
-                <div class="logo_footer">
-                    <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                <div class="col-12 text-center col-lg-6 text-lg-right">
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="adopta.html">Adopta</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="donaciones.html">Donaciones</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
-<!--fin footer-->
+    </header>
+    <!--fin header-->
+    <!--inicio main-->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Nosotros</h2>
+                    <hr><br>
+                    <h2>Nuestro Equipo</h2><br>
+                    <p>Somos un hogar de animales especializada en la ayuda a perros y gatos
+                        maltratados y/o abandonados; totalmente independiente que no recibe subvenciones
+                        de organismos oficiales, empresas ni partidos políticos.
+                        Hogar de Patis está compuesto por voluntarios que comparten el respeto por la vida de los
+                        animales y
+                        los
+                        consideran sus iguales siendo que estos tienen capacidad para sentir placer, alegría, dolor y
+                        sufrimiento.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!--fin main-->
+    <!--inicio footer-->
+    <footer>
+        <div class="container">
+            <div id="contenedor_items_footer" class="row justify-content-center align-items-center">
+                <div id="form_novedades_footer" class="col-5">
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <form>
+                            <div class="form-group text-center">
+                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                                <input type="email" class="form-control" id="InputEmail1">
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div id="contenedor_form" class="row justify-content-center">
+                        <ul class="menu_footer">
+                            <li class="titulo_menu">Menú</li>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="adopta.html">Adopta</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                            <li><a href="donaciones.html">Donaciones</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h4 class="seguinos">Seguinos</h4>
+                    <div class="iconos_redes">
+                        <button><i class="fa-brands fa-facebook-f"></i></button>
+                        <button><i class="fa-brands fa-twitter"></i></button>
+                        <button><i class="fa-brands fa-youtube"></i></button>
+                        <button><i class="fa-brands fa-instagram"></i></button>
+                    </div>
+                    <div class="logo_footer">
+                        <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--fin footer-->
 </body>
+
 </html>
