Se realizan cambios en las imagenes del slider por nuevas

--- a/pages/adopta.html
+++ b/pages/adopta.html
@@ -120,7 +120,8 @@
                 </article>
                 <article>
                     <h2>Requisitos de adopcion</h2>
-                    <p>Si ya lo decidiste y te sentís capacitado es momento de comenzar con el proceso de adopción. Nuestros requisitos de adopcion son los siguientes:</p>
+                    <p>Si ya lo decidiste y te sentís capacitado es momento de comenzar con el proceso de adopción.
+                        Nuestros requisitos de adopcion son los siguientes:</p>
                     <ul class="lista_de_requisitos">
                         <li>Los animales se entregan luego de una charla telefónica orientada a corroborar que se
                             cumplen con
