--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                             <li data-target="#carouselIndicators" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active" style="background-size: cover;
-                            background-position: center;
-                            background-repeat: no-repeat;">
+                            <div class="carousel-item active">
                                 <img class="d-block w-100" src="img/cachorros-web.jpg" data-src="img/cachorros-web.jpg"
                                     alt="First slide">
                             </div>
