nuevo footer terminado

--- a/index.html
+++ b/index.html
@@ -242,111 +242,53 @@
     <!--fin main-->
     <!--inicio footer-->
     <!-- Footer -->
-    <footer class="site-footer">
-        <div class="container">
-            <div class="row justify-content-center justify-content-lg-center">
-                <div id="footer-about-us" class="col-lg-2 widget widget-footer-menu text-center">
-                    <h3 class="widget-title">Hogar de Patis</h3>
-                    <p>Hogar de Patis es un hogar sin fines de lucro abocada a difundir, proteger y promover los
-                        derechos
-                        de los animales.</p>
+    <footer>
+        <div class="container-footer">
+            <div class="one-place">
+                <h3>Hogar de Patis</h3>
+                <p>Hogar de Patis es un hogar sin fines de lucro abocada a difundir, proteger y promover los
+                    derechos
+                    de los animales.</p>
+            </div>
+            <div id="footer-form-novedades" class="one-place">
+                <form>
+                    <div class="form-group text-center text-lg-center">
+                        <label for="InputEmailNovedades">Recibí las novedades por mail</label>
+                        <input type="email" class="form-control" id="InputEmail1">
+                    </div>
+                    <div class=" text-center text-lg-center">
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </div>
+                </form>
+            </div>
+            <div class="one-place">
+                <h3>Menu</h3>
+                <ul class="menu_footer">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="pages/adopta.html">Adopta</a></li>
+                    <li><a href="pages/contacto.html">Contacto</a></li>
+                    <li><a href="pages/donaciones.html">Donaciones</a></li>
+                </ul>
+            </div>
+            <div class="one-place">
+                <div>
+                    <h3>Seguinos en</h3>
+                    <ul class="footer-social">
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    </ul>
                 </div>
-                <div class="col-lg-4 widget widget-footer-menu">
-                    <div id="footer-form-novedades" class="row justify-content-center justify-content-lg-center">
-                        <form>
-                            <div class="form-group text-center text-lg-center">
-                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
-                                <input type="email" class="form-control" id="InputEmail1">
-                            </div>
-                            <div class=" text-center text-lg-center">
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                    <div class="widget widget-footer-menu text-center">
-                        <h3 class="widget-title">Menu</h3>
-                        <ul class="menu_footer">
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="pages/nosotros.html">Nosotros</a></li>
-                            <li><a href="pages/adopta.html">Adopta</a></li>
-                            <li><a href="pages/contacto.html">Contacto</a></li>
-                            <li><a href="pages/donaciones.html">Donaciones</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-lg-offset-1 col-md-4 col-sm-6 col-xs-6">
-                    <div class="widget widget-social-links text-center">
-                        <h3 class="widget-title">Seguinos en</h3>
-                        <ul class="footer-social">
-                            <li><a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-                    <!--Copyright-->
-                    <div class="copyright text-center">
-                        <br /><span><img width="95" src="../img/logo.PNG"></span>
-                        © 2020 - Todos los Derechos Reservados
-                    </div>
+                <div class="copyright">
+                    <span><img width="95" src="../img/logo.PNG">
+                    </span>
+                    © 2022 - Todos los Derechos Reservados
                 </div>
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-    <!-- Footer -->
-    <!-- <footer>
-        <div class="container">
-            <div id="contenedor_items_footer" class="row justify-content-lg-center align-items-lg-center">
-                <div id="form_novedades_footer" class="col-lg-5">
-                    <div id="contenedor_form" class="row justify-content-center justify-content-lg-center">
-                        <form>
-                            <div class="form-group text-center text-lg-center">
-                                <label for="InputEmailNovedades">Recibí las novedades por mail</label>
-                                <input type="email" class="form-control" id="InputEmail1">
-                            </div>
-                            <div class=" text-center text-lg-center">
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div id="contenedor_form" class="row justify-content-center justify-content-lg-center">
-                        <ul class="menu_footer">
-                            <li class="titulo_menu">Menú</li>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="nosotros.html">Nosotros</a></li>
-                            <li><a href="adopta.html">Adopta</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                            <li><a href="donaciones.html">Donaciones</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="row justify-content-center">
-                        <h4 class="seguinos">Seguinos</h4>
-                        <div class="iconos_redes">
-                            <button><i class="fa-brands fa-facebook-f"></i></button>
-                            <button><i class="fa-brands fa-twitter"></i></button>
-                            <button><i class="fa-brands fa-youtube"></i></button>
-                            <button><i class="fa-brands fa-instagram"></i></button>
-                        </div>
-                        <div class="logo_footer">
-                            <img src="../img/logo.PNG" alt="Logo de Hogar de Patis footer">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer> -->
     <!--fin footer-->
 </body>
 
