Se modifica logo de footer en el index

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     </ul>
                 </div>
                 <div class="copyright">
-                    <span><img width="95" src="../img/logo.PNG">
+                    <span><img width="95" src="img/logo.PNG">
                     </span>
                     © 2022 - Todos los Derechos Reservados
                 </div>
